[package]
name = "news"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util-preview = { version = "0.3.0-alpha.17" }
hyper = { git = "https://github.com/hyperium/hyper" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }
tokio ="=0.2.0-alpha.1"
serde_json = "1.0.40"
serde = { version = "1.0.98", features = ["derive"] }
tracing = "0.1.5"
tracing-futures = { git = "https://github.com/tokio-rs/tracing", features = ["std-future"] }
tracing-fmt = { git = "https://github.com/tokio-rs/tracing" }
lazy_static = "1.3.0"
url = "2.1.0"
colored = "1.8.0"
