[package]
name = "news"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util-preview = { version = "0.3.0-alpha.17" }
hyper = "0.13.0"
hyper-tls = "0.4.0"
tokio = { version = "0.2.3", features = ["macros"] }
serde_json = "1.0.40"
serde = { version = "1.0.98", features = ["derive"] }
tracing = "0.1.10"
tracing-futures = { version = "0.2.0", features = ["std-future"] }
tracing-subscriber = "0.2.0-alpha.2"
lazy_static = "1.3.0"
url = "2.1.0"
colored = "1.8.0"
