[package]
name = "news"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.98", features = ["derive"] }
lazy_static = "1.3.0"
url = "2.1.1"
colored = "1.8.0"
ureq = { version = "1.3.0", features = ["json"] }
env_logger = "0.7.1"
log = "0.4.8"
